--- a/public/pages/project.html
+++ b/public/pages/project.html
@@ -9,10 +9,6 @@
     <script type="text/javascript" async="async" defer="defer" src="/application.js"></script>
   </head>
   <body>
-    <nav>
-      <a role="menuitem" href="/pages/todo.html">ToDo Application</a>
-      <a role="menuitem" href="/pages/project.html">My Project</a>
-    </nav>
-
+    <h1>My Project</h1>
   </body>
 </html>
