--- a/public/pages/funnySquares.html
+++ b/public/pages/funnySquares.html
@@ -9,11 +9,6 @@
     <script type="text/javascript" async="async" defer="defer" src="/application.js"></script>
   </head>
   <body>
-    <nav>
-      <button><a role="menuitem" href="/pages/todo.html">ToDo Application</a></button>
-      <button><a role="menuitem" href="/pages/project.html">My Project</a></button>
-      <button><a role="menuitem" href="/pages/funnySquares.html">Funny Squares</a></button>
-    </nav>
-
+    <h1>This is Funny Squares!</h1>
   </body>
 </html>
