--- a/public/pages/dyba.html
+++ b/public/pages/dyba.html
@@ -6,9 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="/main.css">
+    <link rel="stylesheet" type="text/css" href="/css/bootstrap-custom.min.css">
     <script type="text/javascript" async="async" defer="defer" src="/application.js"></script>
   </head>
-  <body>
-    <h1>My Project</h1>
+  <body class="dyba-body">
+    <div class="dyba-container">
+      <header class="dyba-header">
+      </header>
+      <main class="dyba-main"></main>
+      <h1></h1>
+    </div>
   </body>
 </html>
