--- a/public/pages/todo.html
+++ b/public/pages/todo.html
@@ -13,7 +13,7 @@
 
     <!-- Application -->
     <div class="todo-container">
-      <header>Tory's ToDo List</header>
+      <div class="todo-header">Tory's ToDo List</div>
       <div class="add-todo-container">
         <div class="enter-todo">
           <input type="text" class="form-control" placeholder="New ToDo">
@@ -21,7 +21,7 @@
         <button class="btn">Add</button>
       </div>
       <ul class="list-group"></ul>
-      <footer></footer>
+      <div class="todo-footer"></div>
     </div>
   </body>
 </html>
