adding to todo-backbone

--- a/public/pages/dyba.html
+++ b/public/pages/dyba.html
@@ -11,8 +11,7 @@
   </head>
   <body class="dyba-body">
     <div class="dyba-container">
-      <header class="dyba-header">
-      </header>
+      <header class="dyba-header"></header>
       <main class="dyba-main"></main>
       <h1></h1>
     </div>
