--- a/public/pages/todo.html
+++ b/public/pages/todo.html
@@ -16,9 +16,9 @@
       <div class="todo-header">Tory's ToDo List</div>
       <div class="add-todo-container">
         <div class="enter-todo">
-          <input type="text" class="form-control" placeholder="New ToDo">
+          <input type="text" class="form-control input-name" placeholder="New ToDo">
         </div>
-        <button class="btn">Add</button>
+        <button class="btn btn-add">Add</button>
       </div>
       <ul class="list-group"></ul>
       <div class="todo-footer"></div>
