updated dyba css

--- a/public/pages/dyba.html
+++ b/public/pages/dyba.html
@@ -10,10 +10,12 @@
     <script type="text/javascript" async="async" defer="defer" src="/application.js"></script>
   </head>
   <body class="dyba-body">
-    <div class="dyba-container">
-      <header class="dyba-header"></header>
-      <main class="dyba-main"></main>
-      <h1></h1>
+    <div class="dyba-background">
+      <div class="dyba-container">
+        <header class="dyba-header"></header>
+        <main class="dyba-main"></main>
+        <h1></h1>
+      </div>
     </div>
   </body>
 </html>
