completed React todo app

--- a/public/pages/todo.html
+++ b/public/pages/todo.html
@@ -13,7 +13,7 @@
 
     <!-- Application -->
     <div class="todo-container">
-      <div class="todo-header">Tory's ToDo List</div>
+      <div class="todo-header">Tory's React ToDo App</div>
       <div class="add-todo-container">
         <div class="enter-todo">
           <input type="text" class="form-control input-name" placeholder="New ToDo">
