--- a/public/pages/dyba.html
+++ b/public/pages/dyba.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Happy+Monkey" rel="stylesheet">
     <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="/main.css">
-    <link rel="stylesheet" type="text/css" href="/css/bootstrap-custom.min.css">
+    <link rel="stylesheet" type="text/css" href="/css/bootstrap-custom2.min.css">
     <script type="text/javascript" async="async" defer="defer" src="/application.js"></script>
   </head>
   <body class="dyba-body">
