--- a/public/pages/dyba.html
+++ b/public/pages/dyba.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Happy+Monkey" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bungee+Shade|Diplomata|Happy+Monkey" rel="stylesheet">
     <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="/main.css">
     <link rel="stylesheet" type="text/css" href="/css/bootstrap-custom2.min.css">
@@ -15,7 +15,6 @@
       <div class="dyba-container">
         <header class="dyba-header"></header>
         <main class="dyba-main"></main>
-        <h1></h1>
       </div>
     </div>
   </body>
