--- a/public/pages/dyba v3.html
+++ b/public/pages/dyba v3.html
@@ -12,8 +12,10 @@
   </head>
   <body class="dyba-body">
     <div class="dyba-background">
-      <header class="dyba-header"></header>
-      <main class="dyba-main"></main>
+      <div class="dyba-container">
+        <header class="dyba-header"></header>
+        <main class="dyba-main"></main>
+      </div>
     </div>
   </body>
 </html>
