--- a/public/pages/todo.html
+++ b/public/pages/todo.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico">
     <link rel="stylesheet" type="text/css" href="/main.css">
-    <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/css/bootstrap-custom.min.css">
     <script type="text/javascript" async="async" defer="defer" src="/application.js"></script>
   </head>
   <body>
