Added DYBA footer

--- a/public/pages/dyba copy.html
+++ b/public/pages/dyba copy.html
@@ -11,8 +11,9 @@
     <script type="text/javascript" async="async" defer="defer" src="/application.js"></script>
   </head>
   <body class="dyba-body">
-    <header class="dyba-header"></header>
-    <main class="dyba-main"></main>
-    <footer class="dyba-footer row"></footer>
+    <div class="dyba-background">
+      <header class="dyba-header"></header>
+      <main class="dyba-main"></main>
+    </div>
   </body>
 </html>
