Fixed scroll on xs screens

--- a/public/pages/dyba-broken.html
+++ b/public/pages/dyba-broken.html
@@ -11,9 +11,8 @@
     <script type="text/javascript" async="async" defer="defer" src="/application.js"></script>
   </head>
   <body class="dyba-body">
-    <div class="dyba-background">
-      <header class="dyba-header"></header>
-      <main class="dyba-main"></main>
-    </div>
+    <header class="dyba-header"></header>
+    <main class="dyba-main"></main>
+    <footer class="dyba-footer row"></footer>
   </body>
 </html>
